# criticalmiss

./: CLAUDE.md  CMakeLists.txt
.claude/: settings.local.json
.claude/skills/build-game/: SKILL.md
.claude/skills/build-tests/: SKILL.md
.claude/skills/configure-game/: SKILL.md
.claude/skills/run-tests/: SKILL.md
assets/levels/: level1.lvl
include/events/: EventHandler.hpp  IEventSource.hpp  SFMLEventSource.hpp
include/game/: Animate.hpp  AttributeRandomizer.hpp  Attributes.hpp  Creature.hpp  Enemy.hpp  Game.hpp  GameLoop.hpp  GameObject.hpp  Grid.hpp  HealthPotion.hpp  Inanimate.hpp  Item.hpp  Level.hpp  LevelParser.hpp  Party.hpp  PartyMember.hpp  Player.hpp  SpikeTrap.hpp  Tile.hpp  Trap.hpp  Types.hpp  World.hpp  WorldView.hpp
include/io/: LevelLoader.hpp
include/render/: Renderer.hpp
src/: main.cpp
src/events/: EventHandler.cpp  SFMLEventSource.cpp
src/game/: Animate.cpp  AttributeRandomizer.cpp  Creature.cpp  Enemy.cpp  Game.cpp  GameLoop.cpp  GameObject.cpp  Grid.cpp  HealthPotion.cpp  Inanimate.cpp  Item.cpp  Level.cpp  LevelParser.cpp  Party.cpp  Player.cpp  SpikeTrap.cpp  Trap.cpp  World.cpp
src/io/: LevelLoader.cpp
src/render/: Renderer.cpp
tests/: AttributeRandomizerTest.cpp  CMakeLists.txt  CreatureTest.cpp  EnemyTest.cpp  EventHandlerTest.cpp  GameLoopTest.cpp  GameTest.cpp  GridTest.cpp  ItemTest.cpp  LevelLoaderTest.cpp  LevelParserTest.cpp  LevelTest.cpp  PartyMemberTest.cpp  PartyTest.cpp  TestCreature.hpp  TileTest.cpp  TrapTest.cpp
